# Proyecto-TFG

./: .githubworkflowscmake.yml  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  debug_output.txt  test_detection.cpp
.github/workflows/: cmake.yml
ParserBSDL_V1/: ParserBSDL.sln
ParserBSDL_V1/ParserBSDL_V1/: ParserBSDL_V1.vcxproj  ParserBSDL_V1.vcxproj.filters
ParserBSDL_V1/ParserBSDL_V1/include/: DeviceModel.h
ParserBSDL_V1/ParserBSDL_V1/src/: BSDLparser.cpp  DeviceModel.cpp  main.cpp  test_mapeo.cpp
ParserBSDL_V1/ParserBSDL_V1/test_files/: ejemplo.bsd  tp1_laRVa.bsdl
ParserBSDL_V1/ParserBSDL_V1/x64/Debug/: ParserBSDL.exe.recipe  ParserBSDL_V1.exe.recipe  vc143.idb
ParserBSDL_V1/ParserBSDL_V1/x64/Debug/ParserBSDL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ParserBSDL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ParserBSDL_V1/ParserBSDL_V1/x64/Debug/ParserBSDL_V1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ParserBSDL_V1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
examples/: example_basic_usage.cpp
src/: main.cpp  main_cli.cpp
src/bsdl/: DeviceModel.cpp  DeviceModel.h
src/catalog/: BSDLCatalog.cpp  BSDLCatalog.h
src/controller/: ScanController.cpp  ScanController.h  ScanWorker.cpp  ScanWorker.h
src/core/: BoundaryScanEngine.cpp  BoundaryScanEngine.h  JtagStateMachine.cpp  JtagStateMachine.h
src/gui/: ChainExamineDialog.cpp  ChainExamineDialog.h  ChipVisualizer.cpp  ChipVisualizer.h  ConnectionDialog.cpp  ConnectionDialog.h  ControlPanelWidget.cpp  ControlPanelWidget.h  MainWindow.cpp  MainWindow.h  NewProjectWizard.cpp  NewProjectWizard.h  PinControlPanel.cpp  PinControlPanel.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  mainwindow.ui
src/hal/: IJTAGAdapter.h  JtagProtocol.h
src/hal/drivers/: JLinkAdapter.cpp  JLinkAdapter.h  MockAdapter.cpp  MockAdapter.h  PicoAdapter.cpp  PicoAdapter.h
src/hal/factory/: AdapterFactory.cpp  AdapterFactory.h
src/parser/: BSDLParser.cpp  BSDLParser.h
test_files/: 0x12345678.bsd  tp1_laRVa2.bsdl  tp1_laRVa3.bsdl  tp1_laRVa4.bsdl
